feat: completed booking with updated available time and recommendation